# mood-board

./: .replit  Pasted-Project-Overview-I-m-developing-a-web-app-aimed-at-high-school-and-college-students-predominantly-1727260483041.txt  auth.py  cert.pem  color_analysis.py  config.py  generate_cert.py  key.pem  main.py  models.py  pyproject.toml  replit.nix  wallpaper.py
static/css/: styles.css
static/js/: main.js  wallpaper.js
templates/: base.html  create_wallpaper.html  index.html  login.html
